<?php

namespace App\Models\Models\Administracion;

use Illuminate\Database\Eloquent\Model;

class PuntoIndicador extends Model
{
    //
}
