<?php

namespace App\Models\Models\Adopcion;

use Illuminate\Database\Eloquent\Model;

class Adopcion extends Model
{
    //
}
