<?php

namespace App\Models\Models\Adopcion;

use Illuminate\Database\Eloquent\Model;

class VisitaDomiciliaria extends Model
{
    //
}
